--- a/src/css/utils/fonts.scss
+++ b/src/css/utils/fonts.scss
@@ -7,6 +7,7 @@
     url('../../fonts/Museo300.woff2') format('woff2');
   font-weight: 300;
   font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
@@ -18,6 +19,7 @@
     url('../../fonts/Museo500.woff2') format('woff2');
   font-weight: 500;
   font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
@@ -29,6 +31,7 @@
     url('../../fonts/Trajan400.woff2') format('woff2');
   font-weight: 400;
   font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
@@ -40,4 +43,5 @@
     url('../../fonts/Trajan600.woff2') format('woff2');
   font-weight: 600;
   font-style: normal;
+  font-display: swap;
 }
