--- a/src/pages/cost.pug
+++ b/src/pages/cost.pug
@@ -8,7 +8,7 @@ block title
 block content
   main
     //Crumbs
-    +crumbs([{href: 'cost', name: 'Стоимость'}])
+    +crumbs([{href: 'cost.html', name: 'Стоимость'}])
 
     //Cost
     section.cost
