--- a/src/pages/service-complex.pug
+++ b/src/pages/service-complex.pug
@@ -9,8 +9,8 @@ block content
   main
     //Crumbs
     +crumbs([
-      {href: '#', name: 'Услуги'},
-      {href: 'service-complex', name: 'Комплексное бухгалтерское обслуживание'}
+      {href: 'index.html#services', name: 'Услуги'},
+      {href: 'service-complex.html', name: 'Комплексное бухгалтерское обслуживание'}
     ])
 
     //Complex
