--- a/src/pages/service-law.pug
+++ b/src/pages/service-law.pug
@@ -9,8 +9,8 @@ block content
   main
     //Crumbs
     +crumbs([
-      {href: '#', name: 'Услуги'},
-      {href: 'service-law', name: 'Юридические услуги, кадровый учет'}
+      {href: 'index.html#services', name: 'Услуги'},
+      {href: 'service-law.html', name: 'Юридические услуги, кадровый учет'}
     ])
 
     //Law
