--- a/src/pages/service-repair.pug
+++ b/src/pages/service-repair.pug
@@ -9,8 +9,8 @@ block content
   main
     //Crumbs
     +crumbs([
-      {href: '#', name: 'Услуги'},
-      {href: 'service-repair', name: 'Восстановление бухгалтерского и налогового учета'}
+      {href: 'index.html#services', name: 'Услуги'},
+      {href: 'service-repair.html', name: 'Восстановление бухгалтерского и налогового учета'}
     ])
 
     //Repair
