--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -55,11 +55,11 @@ block content
           +plusesItem('Наличие дополнительных услуг.')
 
     //Fee
-    section.fee
-      +feeItem('#', 'fee-1.jpg', '01', 'Комплексное бухгалтерское обслуживание')
-      +feeItem('#', 'fee-2.jpg', '02', 'Налоговое консультирование и разовые услуги')
-      +feeItem('service-repair.html', 'fee-3.jpg', '03', 'Восстановление бухгалтерского и налогового учета')
-      +feeItem('service-law.html', 'fee-4.jpg', '04', 'Юридические услуги, кадровый учет')
+    section#services.fee
+      +feeItem('service-complex', 'fee-1.jpg', '01', 'Комплексное бухгалтерское обслуживание')
+      +feeItem('service-onetime', 'fee-2.jpg', '02', 'Налоговое консультирование и разовые услуги')
+      +feeItem('service-repair', 'fee-3.jpg', '03', 'Восстановление бухгалтерского и налогового учета')
+      +feeItem('service-law', 'fee-4.jpg', '04', 'Юридические услуги, кадровый учет')
 
     //Consult
     +consult('Нужна консультация?', 'Оставьте свою заявку и мы ответим на все ваши вопросы.')
@@ -125,7 +125,7 @@ block content
           +callbackBtn
 
     //Map
-    section.map
+    section#contacts.map
       .container
         .map__info
           h2.map__title Контакты ООО "ОлдТраффорд"
