--- a/src/css/utils/vars.scss
+++ b/src/css/utils/vars.scss
@@ -24,7 +24,7 @@ $color-quaternary-beta: #eaeaea;
 $color-quaternary-omega: #a3a3a3;
 
 $color-form-error: #d4251f;
-$color-form-success: #39eca2cc;
+$color-form-success: #4d7eff;
 
 // Fonts
 $font-primary: 'Museo', sans-serif;
