--- a/src/pages/common/header.pug
+++ b/src/pages/common/header.pug
@@ -1,15 +1,15 @@
 include ../includes/index/mixins
 
 header.header
-  h1.header__title Олд Траффорд - Бухгалтерские услуги
+  h1.header__title Олд Траффорд - Бухгалтерские услуги в Минске
   .header__top.container
     nav.header__menu
       ul
         li: a(href="index.html") Главная
-        li: a(href="#") О нас
+        li: a(href="index.html#about") О нас
         li: a(href="index.html#services") Услуги
         li: a(href="cost.html") Стоимость
-        li: a(href="index.html#contacts") Контакты
+        li: a(href="contacts.html") Контакты
     a.header__mail(href="mailto:buhsale@mail.ru")
       +icon('header__icon icon', 'message')
       p buhsale@mail.ru
