--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -65,7 +65,7 @@ block content
     +consult('Нужна консультация?', 'Оставьте свою заявку и мы ответим на все ваши вопросы.')
 
     //Company
-    section.company(style="background-image: url(images/index/company/bg.jpg)")
+    section#about.company(style="background-image: url(images/index/company/bg.jpg)")
       .container
         .company__inner
           figure.company__img
@@ -125,7 +125,7 @@ block content
           +callbackBtn
 
     //Map
-    section#contacts.map
+    section.map
       .container
         .map__info
           h2.map__title Контакты ООО "ОлдТраффорд"
