--- a/src/css/mixins/phones.scss
+++ b/src/css/mixins/phones.scss
@@ -1,4 +1,4 @@
-@mixin phones($flexDir, $marginRight: 0) {
+@mixin phones($flexDir, $itemMarginRight: 0, $fw: 500) {
   display: flex;
   flex-direction: $flexDir;
 
@@ -6,12 +6,11 @@
     display: flex;
     align-items: center;
 
-    margin-right: $marginRight;
+    margin-right: $itemMarginRight;
 
     color: $color-primary-gamma;
     font-size: 1.6rem;
-    font-weight: 500;
-
+    font-weight: $fw;
     line-height: 1.4;
   }
 
