--- a/src/css/pages/service-law/contacts.scss
+++ b/src/css/pages/service-law/contacts.scss
@@ -30,7 +30,9 @@
   display: flex;
   align-items: center;
 
-  margin-right: 4rem;
+  &:not(:last-child) {
+    margin-right: 4rem;
+  }
 
   a {
     color: $color-secondary-gamma;
