--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -21,6 +21,7 @@
 @import 'common/includes/remark';
 @import 'common/includes/service-descrip-list';
 @import 'common/includes/service-list';
+@import 'common/includes/modal';
 
 @import 'index/includes/decorator';
 @import 'index/includes/title';
