--- a/src/pages/common/layout.pug
+++ b/src/pages/common/layout.pug
@@ -10,6 +10,7 @@ html(lang="ru")
       meta(content="ie=edge" http-equiv="x-ua-compatible")
       link(rel="stylesheet" href="css/style.min.css")
   body
+    #overlay.overlay
     include ../includes/common/mixins
     block header
       include header
