--- a/src/pages/fanzone.pug
+++ b/src/pages/fanzone.pug
@@ -2,6 +2,9 @@ extends common/layout
 
 include includes/fanzone/mixins
 
+block menu
+  +menu
+
 block title
   title ООО ОлдТраффорд - MU Fanzone
 
