--- a/src/css/common/includes/form.scss
+++ b/src/css/common/includes/form.scss
@@ -88,3 +88,67 @@
     background-color: $color-secondary-psi;
   }
 }
+
+.form__checkbox-wrapper {
+  position: relative;
+
+  display: flex;
+  align-items: center;
+
+  cursor: pointer;
+}
+
+.form__checkbox {
+  position: absolute;
+  opacity: 0;
+}
+
+.form__checkbox-styled {
+  position: relative;
+
+  display: inline-block;
+
+  margin-right: 2.5rem;
+
+  min-width: 20px;
+  min-height: 20px;
+
+  background: $color-primary-beta;
+
+  transition: opacity 0.1s linear;
+
+  border: 1px solid $color-quaternary-beta;
+  border-radius: 3px;
+
+  &::before {
+    position: absolute;
+
+    display: block;
+
+    content: '';
+
+    top: 50%;
+    left: 50%;
+
+    width: 10px;
+    height: 10px;
+
+    transform: translate(-50%, -50%);
+    opacity: 0;
+    background-color: $color-primary-alpha;
+    border-radius: 1px;
+  }
+}
+
+.form__checkbox:checked + .form__checkbox-styled::before {
+  opacity: 1;
+}
+
+.form__checkbox-txt {
+  user-select: none;
+
+  font-size: 14px;
+  line-height: 1.4;
+
+  color: #b8b8b8;
+}
