--- a/src/css/pages/fanzone/fanzone.scss
+++ b/src/css/pages/fanzone/fanzone.scss
@@ -32,6 +32,9 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+
+  max-width: 148.4rem;
+  margin: 0 auto;
 }
 
 .fanzone__list {
@@ -49,7 +52,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: space-around;
+  justify-content: inherit;
 
   width: 31%;
   padding: 3rem 0;
