--- a/src/pages/contacts.pug
+++ b/src/pages/contacts.pug
@@ -2,6 +2,9 @@ extends common/layout
 
 include includes/service-onetime/mixins
 
+block menu
+  +menu
+
 block title
   title ОлдТраффорд - Контакты
 
