--- a/src/pages/cost.pug
+++ b/src/pages/cost.pug
@@ -2,6 +2,9 @@ extends common/layout
 
 include includes/cost/mixins
 
+block menu
+  +menu
+
 block title
   title ООО ОлдТраффорд - Стоимость услуг
 
