--- a/src/pages/includes/common/mixins.pug
+++ b/src/pages/includes/common/mixins.pug
@@ -1,6 +1,22 @@
 mixin icon(className, name)
   svg(class= className): use(xlink:href="images/sprite.svg#" + name)
 
+mixin menu(isIndexPage=false)
+  - var indexPageLinks = ['index.html', '#about', '#services', 'cost.html', '#', '#contacts'];
+  - var outerPageLinks = ['index.html', 'index.html#about', 'index.html#services', 'cost.html', '#', 'index.html#contacts'];
+  if isIndexPage
+    - var links = indexPageLinks
+  else
+    - var links = outerPageLinks
+  nav.header__menu
+    ul
+      li: a(href= links[0]) Главная
+      li: a(href= links[1]) О нас
+      li: a(href= links[2]) Услуги
+      li: a(href= links[3]) Стоимость
+      li: a(href= links[4]) Отзывы
+      li: a(href= links[5]) Контакты
+
 mixin location(isLocationIcon= true, isMetroIconLarge = false)
   .location
     a.location__address(href="https://yandex.ru/maps/?um=constructor%3A2a696978720ea53ebd9e73ad180c28869d75ec04b1c62260721b4917e3c98ebd&source=constructorLink" rel="noreferrer" target="_blank")
@@ -31,8 +47,8 @@ mixin phones
         img.phones__icon.phones__icon--mts.icon(src="images/common/mts.png", alt="")
         p.phones__num +375 (29) 878-76-56
 
-mixin callbackBtn
-  button.callback Оставить заявку
+mixin callbackBtn(txt='Оставить заявку')
+  button(data-modal-target="#modal").callback= txt
 
 mixin consult(title, subtitle)
   section.consult.container
@@ -90,8 +106,48 @@ mixin serviceList(arrItems, modif=null)
           else
             p= item.txt
 
+mixin modalForm
+  #modal.modal
+    .modal__wrapper
+      .modal__inner
+        h3.modal__title Оставьте заявку на обратный звонок
+        form#modal-form(method="POST").form
+          .form__control
+            span.form__error
+            input#modal-form-name.form__input(name="form-name" type="text" placeholder="Вашe имя")
+            label(for="modal-form-name").modal__icon-wrapper
+              span.modal__icon
+                <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <mask id="mask0" mask-type="alpha" maskUnits="userSpaceOnUse" x="4" y="14" width="16" height="8">
+                  <path fill-rule="evenodd" clip-rule="evenodd" d="M4 14.4961H19.8399V21.8701H4V14.4961Z" fill="white"/>
+                  </mask>
+                  <g mask="url(#mask0)">
+                  <path fill-rule="evenodd" clip-rule="evenodd" d="M11.921 15.9961C7.66 15.9961 5.5 16.7281 5.5 18.1731C5.5 19.6311 7.66 20.3701 11.921 20.3701C16.181 20.3701 18.34 19.6381 18.34 18.1931C18.34 16.7351 16.181 15.9961 11.921 15.9961ZM11.921 21.8701C9.962 21.8701 4 21.8701 4 18.1731C4 14.8771 8.521 14.4961 11.921 14.4961C13.88 14.4961 19.84 14.4961 19.84 18.1931C19.84 21.4891 15.32 21.8701 11.921 21.8701Z" fill="#DADADA"/>
+                  </g>
+                  <mask id="mask1" mask-type="alpha" maskUnits="userSpaceOnUse" x="6" y="2" width="12" height="11">
+                  <path fill-rule="evenodd" clip-rule="evenodd" d="M6.60986 2.00009H17.2299V12.6187H6.60986V2.00009Z" fill="white"/>
+                  </mask>
+                  <g mask="url(#mask1)">
+                  <path fill-rule="evenodd" clip-rule="evenodd" d="M11.9209 3.42769C9.77989 3.42769 8.03789 5.16869 8.03789 7.30969C8.03089 9.4437 9.75989 11.1837 11.8919 11.1917L11.9209 11.9057V11.1917C14.0609 11.1917 15.8019 9.44969 15.8019 7.30969C15.8019 5.16869 14.0609 3.42769 11.9209 3.42769ZM11.9209 12.6187H11.8889C8.9669 12.6097 6.59989 10.2267 6.60989 7.30669C6.60989 4.3817 8.99189 1.99969 11.9209 1.99969C14.8489 1.99969 17.2299 4.38169 17.2299 7.30969C17.2299 10.2377 14.8489 12.6187 11.9209 12.6187Z" fill="#DADADA"/>
+                  </g>
+                </svg>
+          .form__control
+            span.form__error
+            input#modal-form-phone.form__input(name="form-phone" type="text" placeholder="Ваш телефон")
+            label(for="modal-form-phone").modal__icon-wrapper
+              +icon('modal__icon', 'calling')
+          +callbackBtn('Отправить заявку')
+          .form__control
+            span.form__error Error
+            label.form__checkbox-wrapper
+              input#modal-form-agreement.form__checkbox(name="form-agreement" type="checkbox")
+              span.form__checkbox-styled
+              span.form__checkbox-txt Нажимая на кнопку “Отправить заявку”, вы соглашаетесь на обработку данных
+      button(data-close-button)#modal-close.modal__close
+        +icon('modal__close-icon', 'close')
+
 mixin form(formID, placeholders, names, btnTxt)
-  form(id= formID method= "POST",).form
+  form(id= formID method="POST",).form
     .form__inner
       .form__control
         span.form__error
