--- a/src/pages/service-repair.pug
+++ b/src/pages/service-repair.pug
@@ -2,6 +2,9 @@ extends common/layout
 
 include includes/service-repair/mixins
 
+block menu
+  +menu
+
 block title
   title ОлдТраффорд - Восстановление бухгалтерского и налогового учета
 
@@ -9,7 +12,6 @@ block content
   main
     //Crumbs
     +crumbs([
-      {href: 'index.html#services', name: 'Услуги'},
       {href: 'service-repair.html', name: 'Восстановление бухгалтерского и налогового учета'}
     ])
 
