--- a/src/pages/includes/common/mixins.pug
+++ b/src/pages/includes/common/mixins.pug
@@ -10,12 +10,12 @@ mixin menu(isIndexPage=false)
     - var links = outerPageLinks
   nav.header__menu
     ul
-      li: a(href= links[0]) Главная
-      li: a(href= links[1]) О нас
-      li: a(href= links[2]) Услуги
-      li: a(href= links[3]) Стоимость
-      li: a(href= links[4]) Отзывы
-      li: a(href= links[5]) Контакты
+      li: a(href= links[0] data-scroll) Главная
+      li: a(href= links[1] data-scroll) О нас
+      li: a(href= links[2] data-scroll) Услуги
+      li: a(href= links[3] data-scroll) Стоимость
+      li: a(href= links[4] data-scroll) Отзывы
+      li: a(href= links[5] data-scroll) Контакты
 
 mixin location(isLocationIcon= true, isMetroIconLarge = false)
   .location
@@ -118,13 +118,13 @@ mixin modalForm
             label(for="modal-form-name").modal__icon-wrapper
               span.modal__icon
                 <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                  <mask id="mask0" mask-type="alpha" maskUnits="userSpaceOnUse" x="4" y="14" width="16" height="8">
+                  <mask id="mask0" maskUnits="userSpaceOnUse" x="4" y="14" width="16" height="8">
                   <path fill-rule="evenodd" clip-rule="evenodd" d="M4 14.4961H19.8399V21.8701H4V14.4961Z" fill="white"/>
                   </mask>
                   <g mask="url(#mask0)">
                   <path fill-rule="evenodd" clip-rule="evenodd" d="M11.921 15.9961C7.66 15.9961 5.5 16.7281 5.5 18.1731C5.5 19.6311 7.66 20.3701 11.921 20.3701C16.181 20.3701 18.34 19.6381 18.34 18.1931C18.34 16.7351 16.181 15.9961 11.921 15.9961ZM11.921 21.8701C9.962 21.8701 4 21.8701 4 18.1731C4 14.8771 8.521 14.4961 11.921 14.4961C13.88 14.4961 19.84 14.4961 19.84 18.1931C19.84 21.4891 15.32 21.8701 11.921 21.8701Z" fill="#DADADA"/>
                   </g>
-                  <mask id="mask1" mask-type="alpha" maskUnits="userSpaceOnUse" x="6" y="2" width="12" height="11">
+                  <mask id="mask1" maskUnits="userSpaceOnUse" x="6" y="2" width="12" height="11">
                   <path fill-rule="evenodd" clip-rule="evenodd" d="M6.60986 2.00009H17.2299V12.6187H6.60986V2.00009Z" fill="white"/>
                   </mask>
                   <g mask="url(#mask1)">
@@ -143,7 +143,7 @@ mixin modalForm
               input#modal-form-agreement.form__checkbox(name="form-agreement" type="checkbox")
               span.form__checkbox-styled
               span.form__checkbox-txt Нажимая на кнопку “Отправить заявку”, вы соглашаетесь на обработку данных
-      button(data-close-button)#modal-close.modal__close
+      button(data-close-button aria-label="Close Modal")#modal-close.modal__close
         +icon('modal__close-icon', 'close')
 
 mixin form(formID, placeholders, names, btnTxt)
