--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -14,7 +14,7 @@ block content
           h2.intro__title Профессиональные бухгалтерские услуги
           h3.intro__subtitle Полный спектр бухгалтерских услуг и налоговое консультирование любого вида деятельности
           .intro__buttons
-            a.intro__link(href="#details") Подробнее
+            a.intro__link(href="#details" data-scroll) Подробнее
             +callbackBtn('Рассчитать стоимость услуг')
 
     // Descrip
